--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,10 @@
     font-family: "Roboto", sans-serif;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 body {
    max-width: 100vw; 
    overflow-x: hidden;
@@ -23,10 +27,19 @@ img {
    height: 100%;
    max-height: 50vh;
    padding: 24px;
+
 }
 
 p {
     line-height: 1.5;
+}
+
+a {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
 }
 
 .nav__container {
@@ -77,6 +90,57 @@ li {
 .nav__link--primary:hover {
     text-decoration: none;
 }
+
+.btn__menu {
+    background-color: transparent;
+    font-size: 40px;
+    text-align: center;
+    border: none;
+    color: #7342d6;
+}
+
+.menu__backdrop {
+    position: absolute;
+    background-color: #242424;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    z-index: 100;
+    justify-content: center;
+    align-items: center;
+    display: none;
+}
+
+.menu--open .menu__backdrop {
+    display: flex;
+}
+
+.menu__links {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.menu__list {
+    padding: 32px 0;
+}
+
+.menu__link {
+    font-size: 40px;
+   color: white; 
+}
+
+.btn__menu--close {
+    position: absolute;
+    right: 20px;
+    top: 10px;
+    padding: 8px;
+    color: white;
+}
+
+/* Landing */
+
 
 #landing {
     background-color: rgb(115, 66, 214, 0.1);
@@ -144,6 +208,16 @@ padding: 56px 0;
 width: 100%;
 max-width: 1200px;
 margin: 0 auto;
+ }
+
+ .row__column {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+ }
+
+ .no-cursor {
+    cursor: not-allowed;
  }
 
 /* Highlights */
@@ -233,7 +307,7 @@ background: url(./assets/wave.svg);
 
 .book {
     width: 25%;
-    padding: 24px;
+    padding: 8px;
 }
 .book__img {
     max-height: 380px;
@@ -254,6 +328,7 @@ background: url(./assets/wave.svg);
 
 .book__title {
     font-size: 20px;
+    margin-left: 24px;
     margin-bottom: 8px;
 }
 
@@ -262,13 +337,57 @@ background: url(./assets/wave.svg);
   cursor: not-allowed;  
 }
 
-.book__rating {
-margin-bottom: 8px;
+.book__rating { 
+margin: 0 0 8px 24px;
 color: #fabf2a;
 }
 
 .book__price--normal {
+    margin-left: 24px;
     text-decoration: line-through;
     padding-right: 6px;
     color: #bfbfbf;
+}
+
+/* Explore */
+
+
+#explore {
+    background-color: rgba(115, 66, 214, 0.152);
+}
+
+
+/* Footer*/
+
+footer {
+    background-color: #242424;
+}
+
+.footer__logo {
+    display: flex;
+}
+
+.footer__logo--img {
+    width: 160px;
+    padding: 0;
+    filter: grayscale(1) invert(1);
+}
+
+.footer__link,
+.footer__copyright {
+color: #fff;
+}
+
+.footer__list {
+    margin: 16px 0 24px 0;
+}
+
+.footer__link {
+    padding: 0 8px;
+}
+
+@media (max-width:550px) {
+    .nav__links {
+        display: none;
+    }
 }
