--- a/styles.css
+++ b/styles.css
@@ -97,6 +97,7 @@ li {
     text-align: center;
     border: none;
     color: #7342d6;
+    display: none;
 }
 
 .menu__backdrop {
@@ -107,13 +108,22 @@ li {
     right: 0;
     bottom: 0;
     z-index: 100;
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: none;
+    transition: all 300ms ease;
+    opacity: 0;
+    visibility: hidden;
 }
 
 .menu--open .menu__backdrop {
-    display: flex;
+    visibility: visible;
+    opacity: 1;
+}
+
+.menu--open {
+    max-height: 100vh;
+    overflow-y: hidden;
 }
 
 .menu__links {
@@ -258,6 +268,7 @@ background: url(./assets/wave.svg);
 
 .highlight__wrapper {
     display: flex;
+    flex-wrap: wrap;
 }
 
 .highlight {
@@ -265,7 +276,6 @@ background: url(./assets/wave.svg);
   width: calc(100% / 3);
   display: flex;
   align-items: center;
-  justify-content: center; 
   flex-direction: column; 
 }
 
@@ -290,6 +300,7 @@ background: url(./assets/wave.svg);
 .highlight__subtitle {
    font-size: 20px; 
    margin-bottom: 16px;
+   text-align: center;
 }
 
 /* features */
@@ -386,8 +397,43 @@ color: #fff;
     padding: 0 8px;
 }
 
+/* small phones,tablets, large smartphones */
+
+@media (max-width:768px) {
+.header__description {
+    padding: 0 24px;
+}
+   h1 {
+    font-size: 40px;
+   }
+   h2 {
+    font-size: 26px;
+   }
+   button {
+    font-size: 18px;
+   }
+   .book {
+    width: 50%;
+   }
+}
+
+
+
+/*small phones,large smart phones */
+
 @media (max-width:550px) {
     .nav__links {
         display: none;
     }
+
+    .btn__menu {
+        display: block;
+    }
+    .highlight {
+       width: 100%; 
+    }
+    .highlight:not (:last-child){
+        margin-bottom: 24px;
+    }
+
 }
